--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "browser-sync-webpack-plugin": "^2.3.0",
     "css-loader": "^5.2.6",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^6.0.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
   },
@@ -21,6 +24,7 @@
     "start": "webpack --watch"
   },
   "dependencies": {
-    "browser-sync": "^2.26.14"
+    "browser-sync": "^2.26.14",
+    "material-icons": "^0.7.2"
   }
 }
