--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browser-sync-webpack-plugin": "^2.3.0",
     "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
+    "hamburger": "^0.1.1",
     "html-loader": "^2.1.2",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "copy-webpack-plugin": "^9.0.0",
+    "hamburgers": "^1.1.3",
     "html-webpack-plugin": "^5.3.1",
     "material-icons": "^0.7.2"
   }
