--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "copy-webpack-plugin": "^9.0.0",
     "hamburgers": "^1.1.3",
     "html-webpack-plugin": "^5.3.1",
-    "material-icons": "^0.7.2"
+    "material-icons": "^0.7.2",
+    "simplebar": "^5.3.4"
   }
 }
