--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "devDependencies": {
     "browser-sync-webpack-plugin": "^2.3.0",
     "css-loader": "^5.2.6",
+    "eslint": "^7.30.0",
+    "eslint-loader": "^4.0.2",
     "file-loader": "^6.2.0",
     "hamburger": "^0.1.1",
     "html-loader": "^2.1.2",
@@ -23,7 +25,9 @@
     "start": "webpack serve --open --config webpack.dev.js"
   },
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^9.0.0",
+    "eslint-webpack-plugin": "^2.5.4",
     "hamburgers": "^1.1.3",
     "html-webpack-plugin": "^5.3.1",
     "material-icons": "^0.7.2",
