--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^9.0.0",
     "eslint-webpack-plugin": "^2.5.4",
+    "global": "^4.4.0",
     "hamburgers": "^1.1.3",
     "html-webpack-plugin": "^5.3.1",
     "material-icons": "^0.7.2",
+    "prettier": "^2.3.2",
     "simplebar": "^5.3.4"
   }
 }
