--- a/.eslintrc
+++ b/.eslintrc
@@ -11,8 +11,7 @@
     "rules": {
         "indent": ["error", 2],
         "object-curly-spacing": ["error", "always"],
-        "no-extra-parens": "error",
         "max-len": ["error", { "code": 100 }],
-        "no-multi-spaces": "error"
+        "no-multi-spaces": "error",
     }
 }
